# hexapod_ros2

./: .gitignore  README.md  hexa.rviz  ldlidar.yaml  ldlidar_slam.rviz  mapper_params_online_async.yaml  slam_params.yaml
src/hexa_description/: CMakeLists.txt  package.xml
src/hexa_description/launch/: display.launch.py
src/hexa_description/meshes/stl/: base.stl  hexo_base_v1.001.stl  hexo_base_v1.003.stl  hexo_base_v1.stl  hexo_full.009.stl  hexo_full.010.stl  hexo_full.017.stl  hexo_full.018.stl  leg5_stl1.011.stl  leg5_stl3.009.stl
src/hexa_description/meshes/stl/old/: leg5_stl2.001.stl
src/hexa_description/urdf/: hexa copy.urdf  hexa.urdf  hexa_old.urdf
src/hexa_fake_slam/: package.xml  setup.cfg  setup.py
src/hexa_fake_slam/hexa_fake_slam/: fake_slam_node.py
src/hexa_ik/: CMakeLists.txt  package.xml
src/hexa_ik/include/: hexa_ik.hpp  main_gait.hpp  tripod_gait.hpp
src/hexa_ik/launch/: ik_solver.launch.py
src/hexa_ik/src/: hexa_ik.cpp  main_gait.cpp  tripod_gait.cpp
src/hexa_odom/: package.xml  setup.cfg  setup.py
src/hexa_odom/hexa_odom/: odom_node.py  odom_node_imu.py
src/hexa_servo/: package.xml  setup.cfg  setup.py
src/hexa_servo/hexa_servo/: lewansoul_lx16a_controller.py  servo.py
src/hexa_utils/: CMakeLists.txt  package.xml
src/hexa_utils/launch/: rviz_launch.py
src/hexa_utils/rviz/: hexa_config copy.rviz  hexa_config.rviz
src/ldlidar_stl_ros2/launch/: ld19.launch.py
src/mpu6050_driver/: package.xml  setup.py
src/mpu6050_driver/mpu6050_driver/: mpu6050_driver.py
